welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estSurBiscuit()) {prendBiscuit;return true}
        ^